使用opencode進行 代碼review， 以及修 改了幾個遊戲內容， 具體包括…貪食蛇的 遊玩體驗等

--- a/game2.html
+++ b/game2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML5 Block Blast (Keyboard Ver.)</title>
+    <link rel="stylesheet" href="styles/shared.css">
     <style>
         body {
             background: #000;
@@ -75,7 +76,7 @@
             <div>分數: <span id="score">0</span></div>
         </div>
 
-        <canvas id="gameCanvas" width="320" height="500"></canvas>
+    <canvas id="gameCanvas" width="320" height="500" aria-label="Block Blast game canvas"></canvas>
     </div>
 
     <div id="controls-hint">
