--- a/game3.html
+++ b/game3.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/shared.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>2048 Pro - 滑動動畫版</title>
     <style>
@@ -213,11 +214,11 @@
         <div class="scores-wrapper">
             <div class="score-box">
                 <span class="score-label">分數</span>
-                <span class="score-val" id="score">0</span>
+                <span class="score-val" id="score" aria-live="polite">0</span>
             </div>
             <div class="score-box">
                 <span class="score-label">最高</span>
-                <span class="score-val" id="best-score">0</span>
+                <span class="score-val" id="best-score" aria-live="polite">0</span>
             </div>
         </div>
     </div>
